kubernetes/service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    port: 80
    name: http
  selector:
    app: nginx
